# melodive

./: .gitignore  pnpm-lock.yaml  turbo.json
apps/api/: package.json
apps/api/src/: index.ts  server.ts
apps/fingerprint-service/: main.py  pyproject.toml
scripts/injest-script/: package.json  push-songs.ts
