[project]
name = "fingerprint-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg>=1.4",
    "librosa>=0.11.0",
    "pika>=1.3.2",
    "protobuf>=6.31.1",
    "psycopg2>=2.9.10",
    "pyaudio>=0.2.14",
    "scipy>=1.16.0",
    "soundfile>=0.13.1",
]
